Added blocks to array
Ps. Ese array se va a pasar a Ximena

--- a/src/app/block-component/block-component.component.html
+++ b/src/app/block-component/block-component.component.html
@@ -1,9 +1,9 @@
 <ion-card>
   <ion-card-header>
-    <ion-card-title>{{ currentBlock.label }}</ion-card-title>
+    <ion-card-title>{{ block1.name }}</ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <p>ID_robot: {{ currentBlock.id_in_robot }}</p>
-    <p>Level: {{ currentBlock.level }}</p>
+    <p>Talk: {{ block1.talk }}</p>
+    <p>Level: {{ block1.level }}</p>
   </ion-card-content>
 </ion-card>
