--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,57 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-
-    <ion-split-pane contentId="left-content">
+     <!-- AQUI COMIENZA EL PRIMER SIDE -->
+    <ion-split-pane class="my-componente3" contentId="left-content">
       <ion-nav [root]="rootPage1" name="panel1">
-        <ion-list>
-          <ion-item>
-            <ion-icon name="star" slot="start"></ion-icon>
-            <ion-label>Facial Expression</ion-label>
+        <ion-list class="my-componente1">
+          <ion-item (click)="funcionalidad()" >
+            <ion-button class="f-exp" slot="end" color="light">Facial Expresions</ion-button>
+            <div class="circulo_azul">
+              <ion-icon name="tu-icono" slot="start"></ion-icon>
+            </div>
+            <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
+            <ion-label></ion-label>
           </ion-item>
+          <!--Segundo Item-->
           <ion-item>
-            <ion-icon name="star" slot="start"></ion-icon>
-            <ion-label>Body Gestures</ion-label>
+            <div class="circulo_morado">
+              <ion-icon name="tu-icono" slot="start"></ion-icon>
+            </div>
+            <ion-label> Body Gestures</ion-label>
           </ion-item>
+          <!--Tercer Item-->
           <ion-item>
-            <ion-icon name="star" slot="start"></ion-icon>
+            <div class="circulo_verde">
+              <ion-icon name="tu-icono" slot="start"></ion-icon>
+            </div>
             <ion-label>Tune of voice</ion-label>
           </ion-item>
+          <!--Cuarto Item-->
           <ion-item>
-            <ion-icon name="star" slot="start"></ion-icon>
+            <div class="circulo_amarillo">
+              <ion-icon name="tu-icono" slot="start"></ion-icon>
+            </div>
             <ion-label>Speach</ion-label>
           </ion-item>
+          <!--Quinto Item-->
           <ion-item>
-            <ion-icon name="star" slot="start"></ion-icon>
+            <div class="circulo" style="background-color:#ea8d37">
+              <ion-icon name="tu-icono" slot="start"></ion-icon>
+            </div>
             <ion-label>Routines</ion-label>
           </ion-item>
         </ion-list>
       </ion-nav>
     </ion-split-pane>
-  
+  <!-- AQUI COMIENZA EL SEGUNDO SIDE -->
     <ion-split-pane contentId="right-content">
       <ion-nav [root]="rootPage2" name="panel2">
-        <ion-content>
-          <ion-list>
+        <ion-content  [scrollEvents]="true"
+                      (ionScrollStart)="handleScrollStart()"
+                      (ionScroll)="handleScroll($any($event))"
+                      (ionScrollEnd)="handleScrollEnd()"
+                      class="side2" >
+          <ion-list class="my-componente2">
             <ion-item *ngFor="let item of expressions; let index">
               <ion-avatar slot="start">
                 <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
@@ -39,12 +59,15 @@
               <ion-label>{{ item }}</ion-label>
             </ion-item>
           </ion-list>
-          <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+          <!-- (ionInfinite)="onIonInfinite($event)"  -->
+          <ion-infinite-scroll >
             <ion-infinite-scroll-content></ion-infinite-scroll-content>
           </ion-infinite-scroll>
         </ion-content>
       </ion-nav>
       <ion-nav [root]="rootPage3" name="panel3"></ion-nav>
+
+       <!-- AQUI COMIENZA EL TERCER SIDE -->
     </ion-split-pane>
 
 
