--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,98 @@ ion-menu.md ion-content {
   --padding-bottom: 20px;
 }
 
+
+.f-exp ion-button {
+  width: 100%;
+  height: 100px;  /*100%*/
+  font-size: 1rem;
+  
+}
+
+.f-exp{
+  width: 100px; /* Ancho personalizado en píxeles */
+  height: 70px; /* Alto personalizado en píxeles */
+  font-size: 9px; 
+  
+}
+
+.f-exp ion-label {
+  font-size: 1rem; /* Centrar el texto horizontalmente */
+}
+
+
+/*  CSS DEL ICONO DEL CIRCULO*/
+.circulo_azul {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #007bff; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+}
+
+.circulo_morado {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #e335dd; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+}
+
+.circulo_verde {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #6be765; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+}
+
+.circulo_amarillo {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #dfe560; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+}
+
+.circulo_naranja {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #eea53f; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+}
+
+.circulo {
+  width: 30px; /* Ancho del círculo */
+  height: 30px; /* Alto del círculo */
+  background-color: #ffffff; /* Color de fondo del círculo */
+  border-radius: 50%; /* Hace que el contenedor sea circular */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Color del ícono */
+  
+}
+
+ion-icon {
+  font-size: 24px; /* Tamaño del ícono */
+}
+
 ion-menu.md ion-list {
   padding: 20px 0;
 }
