--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,36 @@
-<ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+<ion-grid class="ion-text-center ion-align-items-center">
+  <!-- Fila para los botones -->
+  <ion-row>
+    <ion-col size="12">
+      <ion-button size="large" colors="danger">Talk</ion-button>
+      <ion-button size="large" colors="danger">Walk</ion-button>
+      <ion-button size="large" color="tertiary">Energetic</ion-button>
+      <ion-button size="large" color="success">Happy</ion-button>
+     
+    </ion-col>
+  </ion-row>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
+  <!-- Fila para el botón personalizado -->
+  <ion-row>
+    <ion-col size="9.4">
+       <ion-button size="large" color="warning">Nod</ion-button>
+       <ion-button size="large" color="warning">Hum</ion-button>
+    </ion-col>
+  </ion-row>
 
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
+<ion-row>
+  <ion-col size="9.5">
+    <ion-button size="large" color="danger">Sub_rutine_1</ion-button>
+    
+  </ion-col>
+</ion-row>
 
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+<ion-row>
+  <ion-col size="8.8">
+    <ion-button size="large" color="danger">Listen</ion-button>
+    
+  </ion-col>
+</ion-row>
+
+</ion-grid>
+
