--- a/src/app/block-component/block-component.component.html
+++ b/src/app/block-component/block-component.component.html
@@ -2,7 +2,7 @@
     <!-- Fila para los botones -->
     <ion-row>
       <ion-col size="12">
-        <ion-button size="large" colors="danger">Talk</ion-button>
+        <ion-button (click)="openPopUp($event)" size="large" colors="danger">Talk</ion-button>
         <ion-button size="large" colors="danger">Walk</ion-button>
         <ion-button size="large" color="tertiary">Energetic</ion-button>
         <ion-button size="large" color="success">Happy</ion-button>
