--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="cancel()">Cancel</ion-button>
-    </ion-buttons>
-    <ion-title>Parameter Update</ion-title>
+    <ion-title class="titleicon" style="display:inline-block"> Update Parameter </ion-title>
+    <img slot="end" class="cross_button" src="../../assets/icon/cross.png" style="display:inline-block" (click)="cancel()"/>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
