--- a/src/app/pop-up/pop-up.component.scss
+++ b/src/app/pop-up/pop-up.component.scss
@@ -9,3 +9,17 @@
   ion-modal {
     --height: auto;
   }
+  
+  ion-title {
+    --color: #000000;
+  }
+  
+  ion-toolbar {
+    --background: #c897d8;
+  }
+
+  .cross_button{
+    width: 3%;
+    height: 3%;
+    margin-right:3%;
+  }
