Pop-up get and saved
Pop-up can grab parameters and set parameters in block

--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -4,11 +4,28 @@
     <img slot="end" class="cross_button" src="../../assets/icon/cross.png" style="display:inline-block" (click)="cancel()"/>
   </ion-toolbar>
 </ion-header>
-<ion-content class="pop-up-content">
-  <div class="ion-text-center">
-    <ion-text>¿What level would you like “Serious”?</ion-text>
-    <ion-range aria-label="Range with ticks" [ticks]="true" [snaps]="true" [min]="0" [max]="2" [pin]="true" [pinFormatter]="pinFormatter"></ion-range>
-    <ion-img class="face" src="../../assets/face.png"></ion-img>
-    <ion-button class="button_save" colors="success">Save Changes</ion-button>
-  </div>
+
+<ion-content class="pop-up-content" [ngSwitch]="block.class">
+    <div class="ion-text-center" *ngSwitchCase="'facial_expression'">
+      <ion-text>¿What level would you like “{{block.name}}”?</ion-text>
+      <ion-range aria-label="Range with ticks" [ticks]="true" [snaps]="true" [min]="0" [max]="2" [pin]="true" [pinFormatter]="pinFormatter" [(ngModel)]="selectedValue"></ion-range>
+      <ion-img class="face" src="../../assets/face.png"></ion-img>
+    </div>
+      
+    <div class="ion-text-center" *ngSwitchCase="'body_gesture'">
+      <ion-text>¿What level would you like “{{block.name}}”?</ion-text>
+      <ion-range aria-label="Range with ticks" [ticks]="true" [snaps]="true" [min]="0" [max]="2" [pin]="true" [pinFormatter]="pinFormatter" [(ngModel)]="selectedValue"></ion-range>
+    </div>
+
+    <div class="ion-text-center" *ngSwitchCase="'speach'">
+      <ion-text>¿What you like your robot to say?</ion-text>
+      <ion-input placeholder="Text Here" [(ngModel)]="talk"></ion-input>
+    </div>
+    
+    <div *ngSwitchDefault>
+      ERROR
+    </div>
+
+    <ion-button class="button_save" colors="success" (click)="save()">Save Changes</ion-button>
+
 </ion-content>
