--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
+  <ion-split-pane class="parte_1" contentId="main-content">
     <!-- AQUI COMIENZA EL PRIMER SIDEBAR -->
-      <ion-content contentId="left-content">
+      <ion-content  contentId="left-content">
         <app-sidebar-first></app-sidebar-first>
       </ion-content>
       <!-- AQUI COMIENZA EL SEGUNDO SIDEBAR -->
