--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,33 @@
 .left-content {
-    max-width: 10%!important;
+    max-width: 500%!important;
 }
 
 app-sidebar-second {
     height: 100%; /* Set an appropriate height */
-    max-width: 50%!important;
+    max-width: 500%!important;
   }
 
   ion-menu {
-    max-width: 50%!important;
+    max-width: 500%!important;
 }
 /* Parte que mofifica el Sidebar*/
 .parte_1{
-  width: 40%; /* Ajusta el ancho según tus necesidades */
+  width: 100%!important; /* Ajusta el ancho según tus necesidades */
+  height: 100%; /* Ajusta la altura según tus necesidades */
+}
+
+.first{
+  max-width: 3%!important; /* Ajusta el ancho según tus necesidades */
+  height: 100%; /* Ajusta la altura según tus necesidades */
+}
+
+.second{
+  max-width: 3%!important; /* Ajusta el ancho según tus necesidades */
+  height: 100%; /* Ajusta la altura según tus necesidades */
+}
+
+.third{
+  max-width: 70%!important; /* Ajusta el ancho según tus necesidades */
   height: 100%; /* Ajusta la altura según tus necesidades */
 }
 
