--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,8 +17,9 @@ app-sidebar-second {
 }
 
 .first{
-  max-width: 3%!important; /* Ajusta el ancho según tus necesidades */
+  max-width: 0.1%!important; /* Ajusta el ancho según tus necesidades */
   height: 100%; /* Ajusta la altura según tus necesidades */
+  text-align: start;
 }
 
 .second{
