--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="titleicon" style="display:inline-block"> Update Parameter </ion-title>
-    <img slot="end" class="cross_button" src="../../assets/icon/cross.png" style="display:inline-block" (click)="cancel()"/>
+    <img slot="end" class="cross_button" src="../../assets/icon/cross_2.png" style="display:inline-block" (click)="cancel()"/>
   </ion-toolbar>
 </ion-header>
 
