--- a/src/app/sidebar-first/sidebar-first.component.html
+++ b/src/app/sidebar-first/sidebar-first.component.html
@@ -2,48 +2,40 @@
   <ion-list class="my-componente1">
     <!-- "scrollService.scrollToComponentB()"-->
     <ion-item >
-      <ion-button (click)="funcionalidad_1()" class="f-exp" slot="end" color="light">Facial Expresions</ion-button>
-      <div class="circulo_azul">
-        <ion-icon name="tu-icono" slot="start"></ion-icon>
-      </div>
+      <ion-button (click)="funcionalidad_1()" class="f-exp" color="light">
+        <ion-icon class="circulo_azul" name="tu-icono" slot="start"></ion-icon>
+        <ion-label style="text-align: left;">Facial Expressions</ion-label>
+      </ion-button>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
-      <ion-label></ion-label>
     </ion-item>
     <!--Segundo Item-->
-    <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" slot="end" color="light">Body Gestures</ion-button>
-      <div class="circulo_morado">
-        <ion-icon name="tu-icono" slot="start"></ion-icon>
-      </div>
+    <ion-item (click)="funcionalidad()">
+      <ion-button class="f-exp" color="light">
+        <ion-icon class="circulo_morado" name="tu-icono" slot="start"></ion-icon>
+        <ion-label style="text-align: left;">Body Gestures</ion-label>
+      </ion-button>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
-      <ion-label></ion-label>
     </ion-item>
     <!--Tercer Item-->
     <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" slot="end" color="light">Tone of Voice</ion-button>
-      <div class="circulo_verde">
-        <ion-icon name="tu-icono" slot="start"></ion-icon>
-      </div>
-      <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
-      <ion-label></ion-label>
+      <ion-button class="f-exp" color="light">
+        <ion-icon class="circulo_verde" name="tu-icono" slot="start"></ion-icon>
+        <ion-label style="text-align: left;">Tone of Voice</ion-label>
+      </ion-button>
     </ion-item>
     <!--Cuarto Item-->
     <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" slot="end" color="light">Speach</ion-button>
-      <div class="circulo_amarillo">
-        <ion-icon name="tu-icono" slot="start"></ion-icon>
-      </div>
-      <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
-      <ion-label></ion-label>
+      <ion-button class="f-exp" color="light">
+        <ion-icon class="circulo_amarillo" name="tu-icono" slot="start"></ion-icon>
+        <ion-label style="text-align: left;">Speech</ion-label>
+      </ion-button>
     </ion-item>
     <!--Quinto Item-->
     <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" slot="end" color="light">Routines</ion-button>
-      <div class="circulo">
-        <ion-icon name="tu-icono" slot="start"></ion-icon>
-      </div>
-      <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
-      <ion-label></ion-label>
+      <ion-button class="f-exp" color="light">
+        <ion-icon class="circulo" name="tu-icono" slot="start"></ion-icon>
+        <ion-label style="text-align: left;">Routines</ion-label>
+      </ion-button>
     </ion-item>
   </ion-list>
 </ion-nav>
