--- a/src/app/sidebar-first/sidebar-first.component.scss
+++ b/src/app/sidebar-first/sidebar-first.component.scss
@@ -1,32 +1,28 @@
 ion-menu ion-content {
     --background: var(--ion-item-background, var(--ion-background-color, #e78bc2));
   }
-  
-  ion-menu.md ion-content {
-    --padding-start: 5px;
-    --padding-end: 5px;
-    --padding-top: 20px;
-    --padding-bottom: 20px;
-  }
-  
-  
+   
 
   .f-exp ion-button {
     width: 100%;
     height: 100px;  /*100%*/
     font-size: 1rem;
-    
+    justify-content: flex-start;
+    text-align: left;
   }
   
   .f-exp{
-    width: 100px; /* Ancho personalizado en píxeles */
+    width: 100%!important; /* Ancho personalizado en píxeles */
     height: 70px; /* Alto personalizado en píxeles */
-    font-size: 9px; 
-    
+    font-size: 9px;
+    justify-content: flex-start;
+    text-align: left;
   }
   
   .f-exp ion-label {
     font-size: 1rem; /* Centrar el texto horizontalmente */
+    justify-content: flex-start;
+    text-align: left;
   }
   
   
@@ -100,4 +96,12 @@ ion-menu ion-content {
   
   ion-icon {
     font-size: 24px; /* Tamaño del ícono */
+  }
+
+  .my-componente1{
+    max-width: 100%!important;
+  }
+
+  ion-button [slot="start"] {
+    justify-content: flex-start;
   }
