Added colors correctly

--- a/src/app/block-component/block-component.component.html
+++ b/src/app/block-component/block-component.component.html
@@ -17,7 +17,7 @@
   <ion-row>
     <ion-col class="padding"></ion-col>
     <ion-col size="auto">
-      <ion-button size="large" color="danger" (click)="openPopUp($event, current_routine.array_block[0][1])">Talk</ion-button>   
+      <ion-button size="large" color="warning" (click)="openPopUp($event, current_routine.array_block[0][1])">Talk</ion-button>   
     </ion-col>
     <ion-col size="auto">
       <ion-button size="large" color="danger">Walk</ion-button>
@@ -33,7 +33,7 @@
   <ion-row>
     <ion-col class="padding"></ion-col>
     <ion-col size="auto">
-      <ion-button size="large" color="warning">Nod</ion-button>
+      <ion-button size="large" color="danger">Nod</ion-button>
     </ion-col>
     <ion-col size="auto">
       <ion-button size="large" color="warning">Hum</ion-button>
@@ -43,14 +43,14 @@
 <ion-row>
   <ion-col class="padding"></ion-col>
   <ion-col size="auto">
-    <ion-button size="large" color="dark">Sub_rutine_1</ion-button>
+    <ion-button size="large" color="medium">Sub_rutine_1</ion-button>
   </ion-col>
 </ion-row>
 
 <ion-row>
   <ion-col class="padding"></ion-col>
   <ion-col size="auto">
-    <ion-button size="large" color="danger">Listen</ion-button>
+    <ion-button size="large" color="warning">Listen</ion-button>
   </ion-col>
 </ion-row>
 
