--- a/src/app/sidebar-first/sidebar-first.component.html
+++ b/src/app/sidebar-first/sidebar-first.component.html
@@ -3,7 +3,7 @@
     <!-- "scrollService.scrollToComponentB()"-->
     <ion-item >
       <ion-button (click)="funcionalidad_1()" class="f-exp" color="light">
-        <ion-icon class="circulo_azul" name="tu-icono" slot="start"></ion-icon>
+        <ion-icon class="circulo_verde" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Facial Expressions</ion-label>
       </ion-button>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
@@ -11,7 +11,7 @@
     <!--Segundo Item-->
     <ion-item (click)="funcionalidad()">
       <ion-button class="f-exp" color="light">
-        <ion-icon class="circulo_morado" name="tu-icono" slot="start"></ion-icon>
+        <ion-icon class="circulo_rojo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Body Gestures</ion-label>
       </ion-button>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
@@ -19,7 +19,7 @@
     <!--Tercer Item-->
     <ion-item (click)="funcionalidad()" >
       <ion-button class="f-exp" color="light">
-        <ion-icon class="circulo_verde" name="tu-icono" slot="start"></ion-icon>
+        <ion-icon class="circulo_morado" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Tone of Voice</ion-label>
       </ion-button>
     </ion-item>
