--- a/src/app/sidebar-first/sidebar-first.component.html
+++ b/src/app/sidebar-first/sidebar-first.component.html
@@ -2,37 +2,36 @@
   <ion-list class="my-componente1">
     <!-- "scrollService.scrollToComponentB()"-->
     <ion-item >
-      <ion-button (click)="funcionalidad_1()" class="f-exp" color="light">
+      <ion-button (click)="buttonClick($event)" data-button-id="btnFacialExp" class="f-exp" color="light">
         <ion-icon class="circulo_verde" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Facial Expressions</ion-label>
       </ion-button>
-      <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
     </ion-item>
     <!--Segundo Item-->
-    <ion-item (click)="funcionalidad()">
-      <ion-button class="f-exp" color="light">
+    <ion-item>
+      <ion-button (click)="buttonClick($event)" data-button-id="btnBodyGest" class="f-exp" color="light">
         <ion-icon class="circulo_rojo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Body Gestures</ion-label>
       </ion-button>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
     </ion-item>
     <!--Tercer Item-->
-    <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" color="light">
+    <ion-item >
+      <ion-button (click)="buttonClick($event)" data-button-id="btnToneVoice" class="f-exp" color="light">
         <ion-icon class="circulo_morado" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Tone of Voice</ion-label>
       </ion-button>
     </ion-item>
     <!--Cuarto Item-->
-    <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" color="light">
+    <ion-item >
+      <ion-button (click)="buttonClick($event)" data-button-id="btnSpeech" class="f-exp" color="light">
         <ion-icon class="circulo_amarillo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Speech</ion-label>
       </ion-button>
     </ion-item>
     <!--Quinto Item-->
-    <ion-item (click)="funcionalidad()" >
-      <ion-button class="f-exp" color="light">
+    <ion-item >
+      <ion-button (click)="buttonClick($event)" data-button-id="btnRoutines" class="f-exp" color="light">
         <ion-icon class="circulo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Routines</ion-label>
       </ion-button>
