Make buttons dynamicly with array

--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -10,7 +10,7 @@
         <ion-avatar slot="start">
           <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
         </ion-avatar>
-        <ion-label>{{ item }}</ion-label>
+        <ion-label>{{ item.label }}</ion-label>
       </ion-item>
     </ion-list>
     <!-- (ionInfinite)="onIonInfinite($event)"  -->
