--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -17,7 +17,7 @@
       <ion-range aria-label="Range with ticks" [ticks]="true" [snaps]="true" [min]="0" [max]="2" [pin]="true" [pinFormatter]="pinFormatter" [(ngModel)]="selectedValue"></ion-range>
     </div>
 
-    <div class="ion-text-center" *ngSwitchCase="'speach'">
+    <div class="ion-text-center" *ngSwitchCase="'speech'">
       <ion-text>¿What you like your robot to say?</ion-text>
       <ion-input placeholder="Text Here" [(ngModel)]="talk"></ion-input>
     </div>
