--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -6,7 +6,7 @@
                 (ionScrollEnd)="handleScrollEnd()"
                 class="side2" >
     <ion-list class="my-componente2">
-      <ion-item *ngFor="let item of options; let index">
+      <ion-item *ngFor="let item of options; let index" (click)="sendBlock(item)">
         <ion-avatar slot="start">
           <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
         </ion-avatar>
