--- a/src/app/block-component/block-component.component.scss
+++ b/src/app/block-component/block-component.component.scss
@@ -21,3 +21,13 @@ $colors: (
 .padding{
   max-width: 2%!important;
 }
+
+ion-grid {
+  border: 1px solid #ccc; /* Add a border to the entire grid */
+}
+
+.grid-cell {
+  border: 1px solid #ccc; /* Add a border to each grid cell */
+  padding: 10px; /* Add padding for spacing */
+  text-align: center; /* Center text within cells */
+}
