--- a/src/app/sidebar-first/sidebar-first.component.scss
+++ b/src/app/sidebar-first/sidebar-first.component.scss
@@ -1,5 +1,6 @@
 ion-menu ion-content {
     --background: var(--ion-item-background, var(--ion-background-color, #e78bc2));
+    max-width: fit-content;
   }
    
 
