--- a/src/app/sidebar-first/sidebar-first.component.html
+++ b/src/app/sidebar-first/sidebar-first.component.html
@@ -1,4 +1,4 @@
-<ion-nav [root]="rootPage1" name="panel1" class="my-componente1">
+<ion-nav name="panel1" class="my-componente1"> <!--[root]="rootPage1"--> 
   <ion-list>
     <!-- "scrollService.scrollToComponentB()"-->
 
