--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -1,4 +1,4 @@
-<ion-nav [root]="rootPage2" name="panel2">
+<ion-nav name="panel2">
   <ion-content  #scrollContent
                 [scrollEvents]="true"
                 (ionScrollStart)="handleScrollStart()"
