Drag and Drop finished
- Only be able to drag and drop on the area defined
- Routines are on the line alone + Only 1 type of block per class in the same row

--- a/src/app/block-component/block-component.component.html
+++ b/src/app/block-component/block-component.component.html
@@ -17,7 +17,7 @@
 
 <ion-row *ngFor="let row of current_routine.array_block" #blockRef>
   <ion-col class="padding" id="padding"></ion-col>
-  <ion-col size="auto" *ngFor="let block of row" class="grid-cell">
+  <ion-col size="auto" *ngFor="let block of row">
     <ion-button size="large" color="{{block.get_color()}}" (click)="openPopUp($event, block)">{{block.name}}</ion-button>
   </ion-col>
 </ion-row>
@@ -28,7 +28,7 @@
 <ion-row>
   <ion-col>
     <div class="start-button">
-      <ion-title >END</ion-title>
+      <ion-title>END</ion-title>
     </div>
   </ion-col>
 </ion-row>
