If saved routine then add it to the options

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,6 @@
         <app-block-component></app-block-component>
       </ion-content>
     </ion-split-pane>
+
+  <ion-button class="clear" (click)="saveRoutine()">SAVE</ion-button>
 </ion-app>
