--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -1,23 +1,31 @@
 <ion-nav name="panel2">
-  <ion-content  #scrollContent
-                [scrollEvents]="true"
-                (ionScrollStart)="handleScrollStart()"
-                (ionScroll)="handleScroll($any($event))"
-                (ionScrollEnd)="handleScrollEnd()"
-                class="side2" >
+  <ion-content
+    #scrollContent
+    [scrollEvents]="true"
+    (ionScrollStart)="handleScrollStart()"
+    (ionScroll)="handleScroll($any($event))"
+    (ionScrollEnd)="handleScrollEnd()"
+    class="side2"
+  >
     <ion-list class="my-componente2">
-      <ion-item *ngFor="let item of options; let index" 
-      draggable="true"
-      (dragend)="onDragEnd($event, item)"
-      color="{{item.color}}" class="desaturate-color">
+      <ion-item
+        *ngFor="let item of options; let index"
+        draggable="true"
+        (dragend)="onDragEnd($event, item)"
+        color="{{ item.color }}"
+        class="desaturate-color"
+      >
         <ion-avatar slot="start">
-          <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
+          <img
+            [src]="'https://picsum.photos/80/80?random=' + index"
+            alt="avatar"
+          />
         </ion-avatar>
         <ion-label>{{ item.label }}</ion-label>
       </ion-item>
     </ion-list>
     <!-- (ionInfinite)="onIonInfinite($event)"  -->
-    
+
     <!--ion-infinite-scroll >
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll -->
