--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -5,15 +5,15 @@
                 (ionScroll)="handleScroll($any($event))"
                 (ionScrollEnd)="handleScrollEnd()" >
     <ion-list class="my-componente2">
-      <ion-item *ngFor="let item of options; let index">
+      <ion-item title="{{ emotion.valor }}" *ngFor="let emotion of emotions">
+        <ion-label>{{ emotion.clave }} </ion-label>  
         <ion-avatar slot="start">
-          <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
+          <!-- TODO: Cambiar por [src]="{{emotion.imgUrl}}"-->
+          <img [src]="'https://picsum.photos/80/80?random='" alt="avatar" />
         </ion-avatar>
-        <ion-label>{{ item }}</ion-label>
-      </ion-item>
+        
+      </ion-item> 
+      
     </ion-list>
   </ion-content>
 </ion-nav>
-<!-- ion-nav [root]="rootPage3" name="panel3"></ion-nav -->
-
-<!--              -->
