Save + Clear button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,9 @@
         <app-block-component></app-block-component>
       </ion-content>
     </ion-split-pane>
-
-  <ion-button class="clear" (click)="saveRoutine()">SAVE</ion-button>
+  
+  <ion-button size="large" color="medium" class="clear" >CLEAR</ion-button>
+  <ion-button size="large" color="success" class="save" (click)="saveRoutine()">SAVE</ion-button>
 </ion-app>
 
 
