--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,3 +43,10 @@ app-sidebar-second {
   bottom: 20px; /* Adjust the distance from the bottom as needed */
   right: 20px; /* Adjust the distance from the right as needed */
 }
+
+.save{
+  max-width: 8%!important;
+  position: fixed;
+  bottom: 20px; /* Adjust the distance from the bottom as needed */
+  right: 120px; /* Adjust the distance from the right as needed */
+}
