--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="titleicon" style="display:inline-block"> Update Parameter </ion-title>
+    <ion-title class="titleicon" style="display:inline-block" ngIf="{{block}}"> Update Parameter </ion-title>
     <img slot="end" class="cross_button" src="../../assets/icon/cross_2.png" style="display:inline-block" (click)="cancel()"/>
   </ion-toolbar>
 </ion-header>
@@ -35,7 +35,7 @@
       <ion-text>¿Are you sure you want to delete your curent routine?</ion-text>
       <ion-input placeholder="Text Here" [(ngModel)]="save"></ion-input>
     </div>
-  </ng-container>
+
 
   <!-- Sección predeterminada para errores -->
   <ng-container *ngSwitchDefault>
