--- a/src/app/sidebar-first/sidebar-first.component.html
+++ b/src/app/sidebar-first/sidebar-first.component.html
@@ -13,24 +13,28 @@
         <ion-icon class="circulo_rojo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Body Gestures</ion-label>
       <!-- ion-icon name="happy-outline" slot="start"></ion-icon -->
+      </ion-button>
     </ion-item>
     <!--Tercer Item-->
     <ion-item >
       <ion-button (click)="buttonClick($event)" data-button-id="btnToneVoice" class="f-exp" color="light">
         <ion-icon class="circulo_morado" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Tone of Voice</ion-label>
+      </ion-button>
     </ion-item>
     <!--Cuarto Item-->
     <ion-item >
       <ion-button (click)="buttonClick($event)" data-button-id="btnSpeech" class="f-exp" color="light">
         <ion-icon class="circulo_amarillo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Speech</ion-label>
+      </ion-button>
     </ion-item>
     <!--Quinto Item-->
     <ion-item >
       <ion-button (click)="buttonClick($event)" data-button-id="btnRoutines" class="f-exp" color="light">
         <ion-icon class="circulo" name="tu-icono" slot="start"></ion-icon>
         <ion-label style="text-align: left;">Routines</ion-label>
+      </ion-button>
     </ion-item>
   </ion-list>
 </ion-nav>
