--- a/src/app/pop-up-save/pop-up-save.component.html
+++ b/src/app/pop-up-save/pop-up-save.component.html
@@ -1,2 +1,13 @@
-<ion-button>SAVE</ion-button>
+<ion-header>
+    <ion-toolbar>
+      <ion-title class="titleicon" style="display:inline-block"> Save </ion-title>
+      <img slot="end" class="cross_button" src="../../assets/icon/cross_2.png" style="display:inline-block" (click)="cancel()"/>
+    </ion-toolbar>
+  </ion-header>
+
+<!-- Sección adicional para 'speech' -->
+<div class="ion-text-center">
+    <ion-text>¿Are you sure you want to delete your curent routine?</ion-text>
+    <ion-input placeholder="Text Here"></ion-input>
+</div>
   
