--- a/src/app/pop-up-clear/pop-up-clear.component.html
+++ b/src/app/pop-up-clear/pop-up-clear.component.html
@@ -1,17 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="titleicon" style="display:inline-block"> Clear </ion-title>
-    <img slot="end" class="cross_button" src="../../assets/icon/cross_2.png" style="display:inline-block" (click)="cancel()"/>
+    <img slot="end"  style="display:inline-block" />
   </ion-toolbar>
 </ion-header>
 
 <div class="ion-text-center button-container">
   <ion-text class="top-text" >¿Are you sure you want to delete your curent routine?</ion-text>
   <div class="botones">
-    <ion-button  (click)="butomYes()">Yes</ion-button>
-    <ion-button  (click)="butomNo()">No</ion-button>
+    <ion-button class="small-button" (click)="butomYes()">Yes</ion-button>
+    <ion-button class="small-button" (click)="butomNo()">No</ion-button>
   </div> 
-  <ion-text class="second-text">¿Are you want to save your curent routine?</ion-text>
-  <ion-button (click)="butomSave()">Save</ion-button>
 </div>
 
