--- a/src/app/pop-up-save/pop-up-save.component.scss
+++ b/src/app/pop-up-save/pop-up-save.component.scss
@@ -5,7 +5,35 @@
     align-items: center;
     justify-content: center;
   }
-  
+
+  /* Texto centrado horizontalmente en el margen */
+.center-text {
+  font-size: 20px; /* Tamaño de fuente deseado */
+  margin-bottom: 20px; /* Espacio entre el texto y los botones (ajusta según sea necesario) */
+}
+
+/* Centrar todo el contenido vertical y horizontalmente en la página */
+.center-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: -10vh; /* Ajusta la altura deseada */
+}
+
+.center-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px; /* Espacio entre los botones (ajusta según sea necesario) */
+}
+
+.small-button {
+  font-size: 16px;
+  margin: 0 10px; /* Espacio horizontal entre los botones (ajusta según sea necesario) */
+}
+
+
   ion-modal {
     --height: auto;
   }
@@ -26,7 +54,7 @@
 
   ion-content {
     --align-items: center;
-    --padding-start: 5%;
+    --padding-start: 10%;
     --padding-end: 5%;
     --padding-top: 3%;
   }
