--- a/src/app/pop-up-save/pop-up-save.component.html
+++ b/src/app/pop-up-save/pop-up-save.component.html
@@ -16,7 +16,7 @@
 
   <!-- Contenedor para los botones centrados horizontalmente en el margen -->
   <div class="center-buttons">
-    <ion-button class="small-button">Save Routine</ion-button>
+    <ion-button class="small-button" (click)="save()">Save Routine</ion-button>
     
   </div>
 </ion-content>
