Fixed bugs with buttons, now both work :)

--- a/src/app/pop-up-save/pop-up-save.component.html
+++ b/src/app/pop-up-save/pop-up-save.component.html
@@ -12,7 +12,7 @@
   </ion-text>
 
       <!-- Campo de entrada de texto -->
-      <ion-input class="center-input" placeholder="Name Routine"></ion-input>
+      <ion-input class="center-input" placeholder="Name Routine" [(ngModel)]="this.name_routine"></ion-input>
 
   <!-- Contenedor para los botones centrados horizontalmente en el margen -->
   <div class="center-buttons">
