--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       </ion-content>
     </ion-split-pane>
   
-  <ion-button size="large" color="medium" class="clear" (click)="clearRoutine()">CLEAR</ion-button>
+  <ion-button size="large" color="medium" class="clear" (click)="clearRoutine()">NEW</ion-button>
   <ion-button size="large" color="success" class="save" (click)="saveRoutine()">SAVE</ion-button>
 </ion-app>
 
