Se creo el componente pop-up-routines para las routines y se integro dentro del PopUpService

--- a/src/app/sidebar-second/sidebar-second.component.html
+++ b/src/app/sidebar-second/sidebar-second.component.html
@@ -15,7 +15,8 @@
         color="{{ item.color }}"
         class="desaturate-color"
         title="{{ item.description }}"
-      >
+        id = "{{item.label}}" 
+        (click)="openPopover(item.color)">
         <ion-avatar slot="start">
           <img
             [src]="'https://picsum.photos/80/80?random=' + index"
