--- a/src/app/pop-up-routines/pop-up-routines.component.html
+++ b/src/app/pop-up-routines/pop-up-routines.component.html
@@ -1,3 +1,5 @@
+<ion-nav >
+  <ion-content class="routineStyle">
 <ion-header>
   <ion-toolbar>
     <ion-title class="titleicon" style="display:inline-block"> Routines </ion-title>
@@ -6,8 +8,10 @@
 </ion-header>
 
 <div class="ion-text-center button-container">
-  <div class="botones">
-    <ion-button class="small-button" (click)="buttonDelete()">Delete</ion-button>
-    <ion-button class="small-button" (click)="buttonDownload()">Download</ion-button>
+  <div >
+    <ion-button class="small-button1" (click)="buttonDelete()">Delete</ion-button>
+    <ion-button class="small-button2" (click)="buttonDownload()">Download</ion-button>
   </div> 
 </div>
+</ion-content>
+</ion-nav>
