--- a/src/app/pop-up-routines/pop-up-routines.component.scss
+++ b/src/app/pop-up-routines/pop-up-routines.component.scss
@@ -6,9 +6,32 @@ ion-title {
     --background: #989aa2;
   }
 
-.botones{
+.botone{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 35px;
+    margin-top: 20px;
+}
+
+.small-button1{
+  width: 100%;
+  background-color: #f0160f;
+}
+
+.small-button2{
+  width: 100%;
+  background-color: #37abee;
+}
+
+.small-modal{
+  &::part(content)
+  {
+    width: 50%;
+    height: 50%;
+    margin: auto;
+    border-radius: 10px;
+  }
+}
+.custom-popover{
+  --max-height: 200px;
 }
